# dbt-governance-as-code

./: .dbt-governance.yml  .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  client-governance-copilot-gemini.md  pr-automation-live-validation.md
e2e/fixture_repo_template/: .dbt-governance.yml  .gitignore  README.md  dbt_project.yml
examples/: .dbt-governance.yml
guild-ui/: README.md  package-lock.json  package.json
guild-ui/app/: globals.css  page.tsx
hub/: README.md  package-lock.json  package.json
hub/app/: globals.css  layout.tsx  page.tsx
hub/app/api/env-check/: route.ts
hub/lib/: governance.ts
scripts/e2e/: bootstrap_fixture_repo.py  run_fixture_pr_validation.py
src/dbt_governance/: __init__.py  cli.py  config.py  manifest.py  project_parser.py  scanner.py
src/dbt_governance/ai/: __init__.py  engine.py  prompts.py  reviewer.py
src/dbt_governance/cloud/: __init__.py  admin.py  client.py  discovery.py  models.py
src/dbt_governance/generators/: __init__.py  claude_md.py  copilot_md.py  gemini_md.py  reuse_md.py  review_md.py
src/dbt_governance/output/: __init__.py  github.py  json_report.py  sarif.py  terminal.py
src/dbt_governance/rules/: __init__.py  base.py  documentation.py  governance.py  materialization.py  migration.py  naming.py  reuse.py  security.py  structure.py  style.py  testing.py
src/dbt_governance/utils/: diff.py
tests/: conftest.py  test_ai_config.py  test_ai_engine.py  test_cloud_admin.py  test_cloud_discovery.py  test_config.py  test_generators.py  test_github_output.py  test_manifest.py  test_output.py  test_rules_documentation.py  test_rules_materialization.py  test_rules_naming.py  test_rules_reuse.py  test_rules_structure.py  test_rules_testing.py  test_scanner.py
tests/fixtures/: sample_manifest.json
(+9 files in other folders)
